# switter

./: .gitignore  Makefile  pyproject.toml
switter/: client.py
tests/: conftest.py  test_client.py  test_switter.py
tests/data/: followers_empty.html  followers_full.html  followers_last.html
