[tool.poetry]
name = "switter"
version = "0.1.0"
description = ""
authors = ["michaeldel <michaeldel@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
flake8 = "^3.7"

[tool.black]
target-version = ['py37']

line-length = 88
skip-string-normalization = true

include = '\.pyi?$'
exclude = '\/\..+$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
